Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2634

Debugging with cdb reports wrong size for QVector<int>

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.1.0
    • Qt Creator 2.1.0
    • Debugger
    • Windows Vista x64
      MSVC 2008
    • f6a1e3b3884faf820defeb0a652e102652d0fc40

      1. Open simple.pro from Creator's repository
      2. Set a breakpoint at line "big[1] = 1;" in function testQVector() (simple_gdbtest_app.cpp, 1515)
      3. Run in debugger. Wait until execution stops at breakpoint. big is reported as having 1.000 elements where it has 10.000. Appending further elements doesn't change the shown number of elements

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes