debugger: fix displayed size of QVector in compiled dumpers

Reviewed-by: Friedemann Kleint
Task-number: QTCREATORBUG-2634